<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/d20dp">

    <TextView
        android:id="@+id/tv_titulo_popup_donde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recarga_con_exito" />

    <ImageView
        android:id="@+id/imv_succes_popup"
        android:layout_width="@dimen/d100dp"
        android:layout_height="@dimen/d100dp"
        android:layout_marginTop="@dimen/d30dp"
        android:background="@drawable/ic_done"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/d30dp">

        <Button
            android:id="@+id/btn_cancelar_popup_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/d10dp"
            android:layout_marginLeft="@dimen/d10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cancelar"
            android:textColor="@android:color/white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_aceptar_popup_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/d10dp"
            android:layout_marginLeft="@dimen/d10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/aceptar"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>