<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginviewmodel"
            type="com.example.companiasapp.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/d20dp">

            <ImageView
                android:layout_width="@dimen/d150dp"
                android:layout_height="@dimen/d150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/d40dp"
                android:background="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/d30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/d10dp"
                    android:background="@mipmap/ic_user" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blue">

                    <EditText
                        android:id="@+id/edt_usuario_login"
                        style="@style/loginEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/usuario"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:text="@={loginviewmodel.user}"
                        android:textColor="@color/blue" />

                    <View style="@style/separadorStyle" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/d30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/d10dp"
                    android:background="@mipmap/ic_pass" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d16dp"
                    android:textColorHint="@color/blue"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue">

                    <EditText
                        android:id="@+id/edt_contra_login"
                        style="@style/loginEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"
                        android:text="@={loginviewmodel.password}"
                        android:textColor="@color/blue" />

                    <View style="@style/separadorStyle" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d30dp"
                android:background="@drawable/rounded_button"
                android:onClick="@{loginviewmodel::onClickButtonLogin}"
                android:text="@string/iniciar_sesion"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</layout>