<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="montoRecargaViewModel"
            type="com.example.companiasapp.viewmodel.MontoRecargaViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_monto_recarga"
                layout="@layout/toolbar" />

            <TextView
                android:id="@+id/tv_compania_titulo"
                android:layout_width="@dimen/d100dp"
                android:layout_height="@dimen/d100dp"
                android:layout_marginTop="@dimen/d50dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/d50sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/d20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/d30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/d10dp"
                        android:background="@drawable/ic_phone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/blue">

                        <EditText
                            android:id="@+id/edt_telefono_recarga"
                            style="@style/loginEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/telefono"
                            android:inputType="number"
                            android:maxLength="10"
                            android:text="@={montoRecargaViewModel.telefono}"
                            android:textColor="@color/blue" />

                        <View style="@style/separadorStyle" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_monto_recarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <ImageView
                        android:layout_width="@dimen/d30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_money" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinner_monto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/d15dp"
                            android:layout_marginLeft="@dimen/d15dp"
                            android:spinnerMode="dropdown" />

                        <View style="@style/separadorStyle" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d20dp"
                    android:gravity="center"
                    android:text="@string/leyenda_recarga" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d30dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="@{montoRecargaViewModel::onClickButtonRecarga}"
                    android:text="@string/continuar"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>